fix overflow scroll | center loading

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,6 @@ html, body {
   height: 100%;
   padding: 0;
   color: white;
-  overflow-x: hidden;
 }
 
 .header-out{
